--- a/modbus-slave/ashbin/ashbin.ioc
+++ b/modbus-slave/ashbin/ashbin.ioc
@@ -50,9 +50,9 @@ NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
 NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM1_UP_TIM10_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.TIM1_UP_TIM10_IRQn=true\:2\:0\:true\:false\:true\:true\:true
 NVIC.USART1_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.USART2_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.USART2_IRQn=true\:3\:0\:true\:false\:true\:true\:true
 NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
 PA0-WKUP.GPIOParameters=GPIO_Label
 PA0-WKUP.GPIO_Label=gasConcentrationADC_IN
@@ -60,8 +60,6 @@ PA0-WKUP.Signal=ADCx_IN0
 PA1.GPIOParameters=GPIO_Label
 PA1.GPIO_Label=weightADC_IN
 PA1.Signal=ADCx_IN1
-PA10.GPIOParameters=GPIO_Label
-PA10.GPIO_Label=temperatureAndHumidityUSART_RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
 PA2.GPIOParameters=GPIO_Label
@@ -120,7 +118,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_ADC1_Init-ADC1-false-HAL-true,4-MX_I2C1_Init-I2C1-false-HAL-true,5-MX_TIM10_Init-TIM10-false-HAL-true,6-MX_USART1_UART_Init-USART1-false-HAL-true,7-MX_USART2_UART_Init-USART2-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_ADC1_Init-ADC1-false-LL-true,4-MX_I2C1_Init-I2C1-false-LL-true,5-MX_TIM10_Init-TIM10-false-LL-true,6-MX_USART1_UART_Init-USART1-false-LL-true,7-MX_USART2_UART_Init-USART2-false-LL-true
 RCC.48MHZClocksFreq_Value=84000000
 RCC.AHBFreq_Value=168000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
@@ -157,14 +155,14 @@ SH.ADCx_IN0.ConfNb=1
 SH.ADCx_IN1.0=ADC1_IN1,IN1
 SH.ADCx_IN1.ConfNb=1
 TIM10.IPParameters=Prescaler,Period
-TIM10.Period=80
+TIM10.Period=35
 TIM10.Prescaler=4199
 USART1.BaudRate=9600
 USART1.IPParameters=VirtualMode,BaudRate
 USART1.VirtualMode=VM_ASYNC
-USART2.BaudRate=9600
+USART2.BaudRate=115200
 USART2.IPParameters=VirtualMode,BaudRate,StopBits
-USART2.StopBits=STOPBITS_2
+USART2.StopBits=STOPBITS_1
 USART2.VirtualMode=VM_ASYNC
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
